src/test/ui/parser/removed-syntax-with-2.stderr
error: expected one of `,` or `}`, found `a`
  --> $DIR/removed-syntax-with-2.rs:20:31
   |
LL |     let b = S { foo: (), with a };
   |                               ^ expected one of `,` or `}` here

error: aborting due to previous error

